# cbpi4-NEXTIONDisplay

./: MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
NEXTIONDisplay/: __init__.py  config.yaml
NEXTIONDisplay/Nextion_Firmware/: Multiscreen7.tft
cbpi4-NEXTIONDisplay/: Nextion_Test.py  Nextion_Test1.py  Nextion_Test2.py  __init__.py  __init__.py.Kiro  __init__.py.orig  _init_.py.Kiro  config.yaml
cbpi4-NEXTIONDisplay Firmware/: Multiscreen7.tft
