[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbpi4-NEXTIONDisplay"
version = "0.0.1"
description = "CraftBeerPi4 NEXTIONDisplay Plugin"
readme = "README.md"
authors = [
    { name = "Jan Battermann", email = "jan.battermann@t-online.de" }
]
license = { text = "GPLv3" }
dependencies = [
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/JamFfm/cbpi4-NEXTIONDisplay"

[tool.setuptools]
include-package-data = true
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.yaml"]
"cbpi4-NEXTIONDisplay" = ["*", "*.txt", "*.rst", "*.yaml"]
